Aggiunta domanda FOAF

--- a/domande&risposte.tex
+++ b/domande&risposte.tex
@@ -163,6 +163,25 @@ subClassOf e individual(concetto di individuo), mentre per i verbi abbiamo a
 disposizione property(la relazione, il verbo), subPropertyOf, Domain(tipo di 
 relazione che delinea il verbo), range(dove la proprietà è applicata).
 Grazie a questi strumenti possiamo dare informazione e categorizzarla 
+
+\item \textbf{FOAF: descrizione, ambiti d'uso, pregi e difetti} \\
+Il progetto FOAF (Friend Of A Friend) è un'ontologia utilizzata per definire un
+vocabolario RDF al fine di descrivere i metadati relativi alle persone e sui loro
+interessi, relazioni e attività. Questa iniziativa è nata con l'obiettivo di 
+creare una rete di dati processabili. Come i documenti HTML, anche i documenti 
+FOAF possono essere collegati tra loro per formare una rete di dati con una
+semantica ben definita. Risulta quindi chiaro che la sua caratteristica principale 
+è quindi quella di definire le relazioni tra le persone, grazie alla relazione 
+foaf:knows, per esempio, posso esprimere il concetto di amicizia e collegare più
+persone. Difetti: attualmente si sta lavorando per risolvere i problemi di 
+affidabilità delle informazioni, garantire e avere la possibilità di correggere 
+eventuali errori nel caso in cui alcuni dati siano sbagliati e infine distinguere 
+i dati pubblici da quelli privati.
+
+
 \end{itemize}
+
+
+
 
 \end{document}
