--- a/Relazione/Res/Comandi.tex
+++ b/Relazione/Res/Comandi.tex
@@ -1,8 +1,9 @@
 % VARIABILI
 
-\newcommand{\Titolo}{\textbf{Fipav Treviso-Belluno}}
+\newcommand{\Titolo}{\textbf{Analisi di usabilità di un sito web}}
 
-\newcommand{\Rel}{Analisi di usabilità di un sito web \\ a.a. 
-2017/2018}
+\newcommand{\Rel}{ di Sara Feltrin \\
+				  matricola 1122453 \\
+				  a.a. 2017/2018}
 
 \newcommand{\DescrizioneDoc}{}
