--- a/Relazione/Res/Sezioni/2-Homepage.tex
+++ b/Relazione/Res/Sezioni/2-Homepage.tex
@@ -30,10 +30,10 @@
 	nell'organizzazione Fipav.
 	
 	\subsubsection{Why}
-	L'asse why deve esporre i benefici del sito web. Come sopra citato il sito si
+	L'asse why deve esporre i benefici del sito web. Come sopra citato, il sito si
 	occupa dell'organizzazione e l'informazione dei campionati di pallavolo 
 	del territorio trevigiano e bellunese. Tale asse è soddisfatto dalle sezioni 
-	presenti all'interno della hopegame, quali \textit{Novità del compitato}, 
+	presenti all'interno della homepage, quali \textit{Novità del comitato}, 
 	\textit{Nuovi contatti telefonici del comitato}, \textit{Tutte le finali dei 
 	campionati ufficiali}. Inoltre, si può dire che, l'asse sia soddisfatto anche
 	dalla presenza delle voci nel menù \textit{Campionati}, \textit{Modulistica} e 
