--- a/Relazione/Res/Sezioni/3-PagineInterne.tex
+++ b/Relazione/Res/Sezioni/3-PagineInterne.tex
@@ -8,7 +8,7 @@
 	mantengono il menù orizzontale con evidenziata la scheda che si è scelta, segue 
 	il logo di cui si è già parlato precedentemente, nella colonna di sinistra sono
 	sempre presenti bacheca del sito, link alla guida tecnica, al sito ufficiale
-	della minivolley e al canale youtube, new della società, collegamenti utili e 
+	della minivolley e al canale youtube, news della società, collegamenti utili e 
 	infine iscrizione alla newsletter.
 	
 	\begin{figure}[H]
@@ -34,7 +34,7 @@
 	informazioni senza dare all'utente uno strumento mirato per velocizzarne la 
 	ricerca. Per esempio, nella pagina \textit{Società} viene illustrato una tabella 
 	che necessità di circa 4 scroll per scorrerla tutta e non viene data la
-	possibilità di ricercare una società specifica in modo mirato.
+	possibilità di ricercare una società specifica in modo più semplice.
 	
 	\begin{figure}[H]
 	\centering
