--- a/Relazione/Stile/FunzioniComandi.tex
+++ b/Relazione/Stile/FunzioniComandi.tex
@@ -9,7 +9,7 @@
   	\centerline{\includegraphics[scale=0.07]{Images/uni.png}} 
     \textbf{Università degli Studi di Padova \\
     Corso di laurea in Informatica}
-    	
+
     
   \end{center}
   
@@ -20,11 +20,11 @@
   \end{Huge}
 
 
-  \begin{center}
+  \begin{figure} [H]
+  	\centering
+  	\includegraphics[scale=0.53]{Images/logo-copertina.jpg}
+  \end{figure}
 
-  \centerline{\includegraphics[scale=0.7]{Images/logo-copertina.jpg}}
-	
-  \end{center}
   \vspace{9pt}  
   
   \begin{large}
