--- a/Relazione/Stile/Stile.tex
+++ b/Relazione/Stile/Stile.tex
@@ -10,7 +10,8 @@
   % cancella tutti i campi di intestazione e piè di pagina
   \fancyhf{}
   
-  \lhead{Analisi di usabilità}
+  \lhead{Analisi di usabilit\`a}
+  \rhead{Sara Feltrin - 1122453}
   
   %\rhead{\includegraphics[width=2cm]{Images/logo.png}}
   
